--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -9,7 +9,7 @@ env:
   PLATFORMS: ${{ vars.PLATFORMS || 'linux/amd64,linux/arm64' }}
 
 jobs:
-  docker-build-push:
+  docker:
     runs-on: ubuntu-latest
     permissions:
       contents: read
