--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -19,6 +19,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.inputs.branch }}
+      
+      - name: Set current datetime as env variable
+        env:
+          TZ: 'Asia/HongKong' # タイムゾーン指定
+        run: echo "CURRENT_DATETIME=$(date +'%Y-%m-%d-%H%M%S')" >> $GITHUB_ENV
           
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -46,7 +51,7 @@ jobs:
           context: .
           platforms: ${{ env.PLATFORMS }}
           push: true
-          tags: ${{ github.actor }}/go-chatgpt-api:${{ github.event.inputs.image_tag }}
+          tags: ${{ github.actor }}/go-chatgpt-api:${{ env.CURRENT_DATETIME }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
  
@@ -65,6 +70,6 @@ jobs:
           context: .
           platforms: ${{ env.PLATFORMS }}
           push: true
-          tags: ghcr.io/${{ github.actor }}/go-chatgpt-api:${{ github.event.inputs.image_tag }}
+          tags: ghcr.io/${{ github.actor }}/go-chatgpt-api:${{ env.CURRENT_DATETIME }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
