Modified Docker image tagging
The Docker image tagging process in the GitHub workflow has been adjusted. Instead of using the GitHub actor for the tag, it now uses a secret DOCKER_HUB_USERNAME. This change ensures that images are tagged with the correct username when pushed to Docker Hub.

--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -51,7 +51,7 @@ jobs:
           context: .
           platforms: ${{ env.PLATFORMS }}
           push: true
-          tags: ${{ github.actor }}/go-chatgpt-api:${{ env.CURRENT_DATETIME }}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/go-chatgpt-api:${{ env.CURRENT_DATETIME }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache,mode=max
  
