--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -1,12 +1,14 @@
 name: Docker build and push
 
 on:
- push:
-   branches:
-     - main
+  push:
+    branches:
+      - main
+      - release
 
 env:
   PLATFORMS: ${{ vars.PLATFORMS || 'linux/amd64,linux/arm64' }}
+  BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
 
 jobs:
   docker:
@@ -57,6 +59,7 @@ jobs:
  
       - name: Log into ghcr
         uses: docker/login-action@v2
+        if: ${{ env.BRANCH_NAME == 'release' }}
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -64,6 +67,7 @@ jobs:
  
       - name: Build and push to ghcr
         uses: docker/build-push-action@v4
+        if: ${{ env.BRANCH_NAME == 'release' }}
         with:
           context: .
           platforms: ${{ env.PLATFORMS }}
