--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,10 +3,11 @@ name: Release
 on:
   push:
     branches:
-      - 'main'
+      - 'release'
 
 env:
   PLATFORMS: ${{ vars.PLATFORMS || 'linux/amd64,linux/arm64' }}
+  BRANCH_NAME: ${{ github.head_ref || github.ref_name }} 
 
 jobs:
   release:
