--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -3,8 +3,7 @@ name: Docker build and push
 on:
   push:
     branches:
-      - main
-      - release
+      - 'release'
 
 env:
   PLATFORMS: ${{ vars.PLATFORMS || 'linux/amd64,linux/arm64' }}
