--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,14 @@
 PORT=8080
 TZ=Asia/Shanghai
 PROXY=
+OPENAI_DEVICE_ID=
 OPENAI_EMAIL=
 OPENAI_PASSWORD=
-CONTINUE_SIGNAL=
 ENABLE_HISTORY=
 IMITATE_ACCESS_TOKEN=
-NINJA_URL=http://127.0.0.1:7999
+CUSTOM_FREE_TOKEN=
+POW_RETRY_TIMES=0
+POW_MAX_DIFFICULTY=000032
+HARDWARE=
+POW_MAX_CALC_TIMES=500000
+PROCESS_TURNSTILE=true
